# automedia

./: .gitignore  Dockerfile  LICENSE  README.md  automedia  automedia-docker  make.sh  media-verify-docker  pyproject.toml  test
docs/: recording.yml
src/: ffmpeg_validator.py  forward_progress.py  jobqueue.py  main.py  operation.py  par2.py
src/automedia/: docker.py  ffmpeg.py  ffmpeg_transcoder.py  ffmpeg_validator.py  forward_progress.py  jobqueue.py  main.py  operation.py  par2.py  path_scan.py
test/: script-print-error
tests/: script-sleep  test_transcode.py  test_verify.py
