[build-system]
requires = ["setuptools", "twine", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "automedia"
version = "0.6"
description = "Automedia is a tool to manage large media libraries, whether it be audio or video."
license = { text = "GNU General Public License v3 (GPLv3)" }
readme = "README.md"
authors = [
    { name="Matt Mastracci", email="matthew@mastracci.com" },
    { name="Estefania Barreto-Ojeda", email="estefania@ojeda-e.com" },
]

[project.scripts]
automedia = "automedia.main:main"
